{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 20,
  "lineage": "c01b348f-5333-e802-da7d-7f96ebf67afb",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "80",
                  "3306",
                  "443"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2023-06-21T09:19:21.935-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/team3terraformproject/global/firewalls/best-gcp-firewall-iowa",
            "log_config": [],
            "name": "best-gcp-firewall-iowa",
            "network": "https://www.googleapis.com/compute/v1/projects/team3terraformproject/global/networks/best-gcp-vpc-iowa",
            "priority": 1000,
            "project": "team3terraformproject",
            "self_link": "https://www.googleapis.com/compute/v1/projects/team3terraformproject/global/firewalls/best-gcp-firewall-iowa",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [
              "fun-gcp-firewall"
            ],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": true,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/team3terraformproject/global/networks/best-gcp-vpc-iowa",
            "mtu": 0,
            "name": "best-gcp-vpc-iowa",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "team3terraformproject",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/team3terraformproject/global/networks/best-gcp-vpc-iowa"
          }
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "default-hc-fw",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-06-21T09:19:21.412-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/team3terraformproject/global/firewalls/best-gcp-lb-iowa-hc",
            "log_config": [],
            "name": "best-gcp-lb-iowa-hc",
            "network": "https://www.googleapis.com/compute/v1/projects/team3terraformproject/global/networks/best-gcp-vpc-iowa",
            "priority": 1000,
            "project": "team3terraformproject",
            "self_link": "https://www.googleapis.com/compute/v1/projects/team3terraformproject/global/firewalls/best-gcp-lb-iowa-hc",
            "source_ranges": [
              "209.85.152.0/22",
              "209.85.204.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "my-target-pool"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "default-lb-fw",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-06-21T09:19:21.963-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/team3terraformproject/global/firewalls/best-gcp-lb-iowa-vm-service",
            "log_config": [],
            "name": "best-gcp-lb-iowa-vm-service",
            "network": "https://www.googleapis.com/compute/v1/projects/team3terraformproject/global/networks/best-gcp-vpc-iowa",
            "priority": 1000,
            "project": "team3terraformproject",
            "self_link": "https://www.googleapis.com/compute/v1/projects/team3terraformproject/global/firewalls/best-gcp-lb-iowa-vm-service",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "my-target-pool"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "google_compute_forwarding_rule",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "all_ports": false,
            "allow_global_access": false,
            "allow_psc_global_access": false,
            "creation_timestamp": "2023-06-21T09:18:51.004-07:00",
            "id": "projects/team3terraformproject/regions/us-central1/forwardingRules/best-gcp-lb-iowa",
            "ip_address": "35.202.132.6",
            "ip_protocol": "TCP",
            "is_mirroring_collector": false,
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "best-gcp-lb-iowa",
            "network_tier": "PREMIUM",
            "port_range": "80-80",
            "project": "team3terraformproject",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/team3terraformproject/regions/us-central1/forwardingRules/best-gcp-lb-iowa",
            "target": "https://www.googleapis.com/compute/v1/projects/team3terraformproject/regions/us-central1/targetPools/best-gcp-lb-iowa"
          },
          "dependencies": [
            "module.lb.google_compute_http_health_check.default",
            "module.lb.google_compute_target_pool.default"
          ]
        }
      ]
    }
  ]
}